--- a/apply.html
+++ b/apply.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary nav ">
         <div class="container-fluid ">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="login.html">
                 <span class="d-flex text-primary"><img src="img/Screenshot 2024-07-01 091817.png" alt="">
                     <p> <b>BROCKWAY</b> <br> Community College</p>
                 </span>
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style="color: #df1616;"><i class="fa-regular fa-user colorf"></i>
+                        <a class="nav-link" href="login.html" style="color: #df1616;"><i class="fa-regular fa-user colorf"></i>
                             login
                         </a>
                     </li>
