--- a/campus.html
+++ b/campus.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style="color: #df1616;"><i class="fa-regular fa-user colorf"></i>
+                        <a class="nav-link" href="login.html" style="color: #df1616;"><i class="fa-regular fa-user colorf"></i>
                             login
                         </a>
                     </li>
