--- a/login.html
+++ b/login.html
@@ -11,6 +11,70 @@
 </head>
 
 <body style="background-image: url(img/bg1.webp); background-repeat: no-repeat; background-size: cover;">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary nav " style="position: sticky; z-index: 2;">
+            <div class="container-fluid ">
+                <a class="navbar-brand" href="#">
+                    <span class="d-flex text-primary"><img src="img/Screenshot 2024-07-01 091817.png" alt="">
+                        <p> <b>BROCKWAY</b> <br> Community College</p>
+                    </span>
+
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="nav-link" href="login.html" style="color: #df1616;"><i
+                                    class="fa-regular fa-user colorf"></i>
+                                login
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html"
+                                style="color: #df1616;">Home</a>
+                        </li>
+                        <ul class="nav2st navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="academics.html">Academics</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link" href="faculty.html">Faculty and Staff</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="apply.html">Apply And Enroll</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="event.html" class="nav-link">Event</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="campus.html" class="nav-link">Campus Life</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="contact.html" class="nav-link">
+                                    Contact
+                                </a>
+                            </li>
+                        </ul>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="container col-4 mx-auto my-5" style="z-index: 3; position: relative;">
         <div class="row "
             style="background-color: rgb(240,75,70); border-top-right-radius: 5px; border-top-left-radius: 5px; align-items: center;">
