--- a/login.html
+++ b/login.html
@@ -11,156 +11,149 @@
 </head>
 
 <body style="background-image: url(img/bg1.webp); background-repeat: no-repeat; background-size: cover;">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary nav " style="position: sticky; z-index: 2;">
-            <div class="container-fluid ">
-                <a class="navbar-brand" href="#">
-                    <span class="d-flex text-primary"><img src="img/Screenshot 2024-07-01 091817.png" alt="">
-                        <p> <b>BROCKWAY</b> <br> Community College</p>
-                    </span>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary nav " style="position: sticky; z-index: 2;">
+        <div class="container-fluid ">
+            <a class="navbar-brand" href="#">
+                <span class="d-flex text-primary"><img src="img/Screenshot 2024-07-01 091817.png" alt="">
+                    <p> <b>BROCKWAY</b> <br> Community College</p>
+                </span>
 
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html" style="color: #df1616;"><i
+                                class="fa-regular fa-user colorf"></i>
+                            login
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html"
+                            style="color: #df1616;">Home</a>
+                    </li>
+                    <ul class="nav2st navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html" style="color: #df1616;"><i
-                                    class="fa-regular fa-user colorf"></i>
-                                login
+                            <a class="nav-link" href="academics.html">Academics</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="faculty.html">Faculty and Staff</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="apply.html">Apply And Enroll</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="event.html" class="nav-link">Event</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="campus.html" class="nav-link">Campus Life</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="contact.html" class="nav-link">
+                                Contact
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html"
-                                style="color: #df1616;">Home</a>
-                        </li>
-                        <ul class="nav2st navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="academics.html">Academics</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="faculty.html">Faculty and Staff</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="apply.html">Apply And Enroll</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="event.html" class="nav-link">Event</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="campus.html" class="nav-link">Campus Life</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="contact.html" class="nav-link">
-                                    Contact
-                                </a>
-                            </li>
-                        </ul>
                     </ul>
+                </ul>
 
-                </div>
-            </div>
-        </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="container col-4 mx-auto my-5" style="z-index: 3; position: relative;">
-        <div class="row "
-            style="background-color: rgb(240,75,70); border-top-right-radius: 5px; border-top-left-radius: 5px; align-items: center;">
-            <div class="col-6">
-                <span class="d-flex text-primary" style="align-items: center;">
-                    <img src="img/Screenshot 2024-07-01 091817.png" alt="">
-                    <p class=""> <b>BROCKWAY</b> <br> Community College</p>
-                </span>
-            </div>
-            <div class="col-6">
-                <span class="pt-5">
-                    <i class="text-light fa-solid fa-lock"></i>
-                    <b class="text-light">
-
-                        SIGN-IN
-                    </b>
-                </span>
             </div>
         </div>
+    </nav>
 
 
 
 
-        <div class="row bg-light ">
-            <div class="col-6 text-center mx-auto pt-3 fw-3 fs-5">
+
+
+
+
+
+
+
+    <div class="overall2" style="z-index: 2;">
+        <div class="head-section text-light" style="z-index: 2;">
+            <span style="display: flex;">
+                <img src="img/Screenshot 2024-07-01 091817.png" alt="">
+                <p class=""> <b>BROCKWAY</b> <br> Community College</p>
+            </span>
+            <span>
+                <i class="text-light fa-solid fa-lock"></i>
                 <b>
-                    ADMISSION PORTAL
+                    SIGN-IN
                 </b>
-            </div>
+            </span>
         </div>
-        <div class="row" style="background-color: rgb(255,170,51);">
-            <div class="col-3 text-center mx-auto">
-                <i class=" fa-solid fa-info"></i>
-            </div>
-            <div class="col-9">
-                <h5>
-
+        <div class="notice-section">
+            <span class="caution">
+                <i class="fs fa-solid fa-circle-exclamation"></i>
+            </span>
+            <span>
+                <h3>
                     Notice:
-                </h5>
-
+                </h3>
                 <p>
-                    Enter the email address and password provided during sign-up, if you do not have an account, click
-                    on CREATE ACCOUNT
+                    <span style="background-color: dodgerblue ; color: white;"> STUDENT </span> Enter JAMB REG Number or
+                    Matric number as Username and password1 as default password
                 </p>
-            </div>
-            <form action="">
-                <div>
-                    <label for="" style="background-color: rgb(218,220,221); padding-top: 10px; padding-bottom: 10px;">
-                        <i class="fa-solid fa-user"></i>
-                        <b>
-                            Username
-                        </b>
-                    </label>
-                    <input type="text" placeholder="Enter Your Email Address" style="width: 300px; height: 3rem;">
-                </div>
+                <p>
+                    <span style="background-color: dodgerblue; color: white;"> STAFF </span> Enter Staff ID as Username
+                    and your password
+                </p>
 
-
-                <div style="margin-top: 1rem;">
-                    <label for="" style="background-color: rgb(218,220,221); padding-top: 10px; padding-bottom: 10px;">
-                        <i class="fa-solid fa-lock"></i>
-                        <b>
-                            Passwords
-                        </b>
-                    </label>
-                    <input type="password" placeholder="password" style="width: 300px; height: 3rem;">
-                </div>
-
-                <button
-                    style="width: 95%; display: flex; justify-content: space-between; margin-top: 1rem; height: 3rem; align-items: center; background-color: rgb(240,75,70); border: none; border-radius: 10px;">Login
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
-                <div style="margin-top: 1rem; display: flex; justify-content: space-between;">
-                    <button style="width: 40%; display: flex; align-items: center; justify-content: space-between;">
-                        Reset Passwords <i class="fa-solid fa-lock"></i> </button>
-                    <button style="width: 40%; display: flex; align-items: center; justify-content: space-between;">
-                        Create Account
-                        <i class="fa-solid fa-user-plus"></i>
-                    </button>
-                </div>
-
-            </form>
-            <p class=" text-center mt-3 mb-5">
-                Powered By? BROCKWAY DICT
-            </p>
+                <marquee behavior="" direction="">
+                    NEW USER If you are using the portal for the first time, use "password1" as your default password
+                    and matriculation number or Jamb Reg as your username....
+                </marquee>
+            </span>
         </div>
-       
+
+        <form action="">
+            <span style="display: flex; align-items: center;  margin: 10px;">
+                <label for=""
+                    style="display: flex; background-color:  rgb(218,220,221);align-items: center; border-top-left-radius: 1rem ; border-bottom-left-radius: 10px; padding-left: 1rem;   ">
+                    <i class="fa-solid fa-user"></i>
+                    <p class="my-2">
+                        USERNAME
+                    </p>
+                </label>
+                <input type="text" placeholder="Enter Your Username"
+                    style="flex: 1; height: 2.5rem; background-color: rgb(235,236,237); outline: none; outline: none; border-top-right-radius: 1rem; border-bottom-right-radius: 1rem; border: none;">
+            </span>
+
+
+            <span style="display: flex; align-items: center;  margin: 10px;">
+                <label for=""
+                    style="display: flex; background-color:  rgb(218,220,221);align-items: center; border-top-left-radius: 1rem ; border-bottom-left-radius: 1rem; padding-left: 10px;  ">
+                    <i class="fa-solid fa-lock"></i>
+                    <p class="my-2">
+                        PASSWORD
+                    </p>
+                </label>
+                <input type="password" placeholder="password"
+                    style="flex: 1; height: 2.5rem; background-color: rgb(235,236,237); outline: none; outline: none;  border-top-right-radius: 1rem; border-bottom-right-radius: 1rem; border: none;">
+            </span>
+
+            <button class=""
+                style="width: 95%; display: flex; justify-content: space-between; margin-top: 1rem; height: 3rem; align-items: center; background-color: rgb(240,75,70); border: none; border-radius: 10px; margin-left: 10px;">Login
+                <i class="fa-solid fa-arrow-right"></i>
+            </button>
+            <div style="margin-top: 1rem; display: flex; justify-content: space-around;">
+                <button style="width: 40%; display: flex; align-items: center; justify-content: space-between;">
+                    Reset Passwords <i class="fa-solid fa-lock"></i> </button>
+                <button style="width: 40%; display: flex; align-items: center; justify-content: space-between;">
+                    Create Account
+                    <i class="fa-solid fa-user-plus"></i>
+                </button>
+            </div>
+        </form>
+        <p class=" text-center mt-3 mb-1" style="padding-bottom: 10px;">
+            Powered By? BROCKWAY DICT
+        </p>
+
 
     </div>
 
