--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
 
 
 
-    <div class="overall2" style="z-index: 2;">
+    <div class="overall2 container" style="z-index: 2;">
         <div class="head-section text-light" style="z-index: 2;">
             <span style="display: flex;">
                 <img src="img/Screenshot 2024-07-01 091817.png" alt="">
